--- a/slides/index.html
+++ b/slides/index.html
@@ -26,47 +26,98 @@
             <div class="slides">
                 <section data-markdown data-background="data/ovh-meet-up-brest-digit-event.jpg">
                     # OVH
-                    #### Vers l'infini et l'au delà
+                    #### Architecture a debordement
                     ![Architecture](data/logo-ovh-sans-150DPI.png)
                 </section>
-                <section  data-markdown data-background="data/nova_boot.gif" data-background-size="contain" data-background-color="black">
-                    # Instances à la demande
+
+
+                <!-- INTRO -->
+                <section>
+                    <section data-markdown>
+                        ## TODO INTRO
+                    </section>
                 </section>
-                <section  data-markdown data-background="data/facturation.gif" data-background-color='white'>
-                    # Facturation à l'heure
+
+                <!-- SD -->
+                <section>
+                    <section data-markdown data-background="data/ovh_dc_bhs.jpg" data-background-size="contain" data-background-color="black">
+                        ## Dedicated servers
+                    </section>
+                    <section data-markdown>
+                        ### C'est quoi ?
+                    </section>
+                    <section data-markdown>
+                        ### BLA BLA sur SD
+                    </section>
                 </section>
-                <section  data-markdown data-background="data/flavors.gif" data-background-size="contain" data-background-color="black">
-                    # Des gabarits à partir de 4€/mois
+
+
+                <!-- PCI -->
+                <section>
+                    <section data-markdown data-background="data/header-pci-pl.png" data-background-color="black">
+                        ## Public Cloud Infrastructure
+                    </section>
+                    <section data-markdown>
+                        ### C'est quoi ?
+                    </section>
+                    <section data-markdown data-background="data/nova_boot.gif" data-background-size="contain" data-background-color="black">
+                        # Instances à la demande
+                    </section>
+                    <section data-markdown data-background="data/facturation.gif" data-background-color='white'>
+                        # Facturation à l'heure
+                    </section>
+                    <section data-markdown data-background="data/flavors.gif" data-background-size="contain" data-background-color="black">
+                        # Des gabarits à partir de 4€/mois
+                    </section>
+                    <section data-background-video="data/montage_screen1_V2.mp4" data-background-video-loop data-background-video-muted data-background-color='white'>
+                        <h1>Interface de gestion simplifiée</h1>
+                    </section>
+                    <section data-markdown data-background="data/map-region-pci-en-v3.jpg" data-background-color='black'>
+                        ## 6 regions (13 soon!)
+                    </section>
                 </section>
-                <section data-background-video="data/montage_screen1_V2.mp4" data-background-video-loop data-background-video-muted data-background-color='white'>
-                    <h1>Interface de gestion simplifiée</h1>
+
+
+                <!-- VRACK -->
+                <section>
+                    <section data-markdown data-separator-notes="^Note:" data-background="data/networking2.gif">
+                        ## vRack
+                    </section>
+                    <section data-markdown>
+                        ### C'est quoi ?
+                    </section>
+                    <section data-markdown>
+                        ### Reseau prive de niveau 2
+                        ![vRack](data/schema-isolation.png)
+                    </section>
+                    <section data-markdown>
+                        ### 4000 VLAN possibles!
+                        ![vRack](data/schema-vlan.png)
+                    </section>
+                    <section data-markdown>
+                        ### Faible latence
+                        ###### 40ms entre DC France / Canada
+                        ![vRack](data/schema-datacentre.png)
+                    </section>
+                    <section data-markdown>
+                        ### API et Manager
+                        ![vRack](data/api.gif)
+                    </section>
                 </section>
-                <section  data-markdown data-background="data/map-region-pci-en-v3.jpg" data-background-color='black'>
-                    ## 5 regions (13 soon!)
+
+
+                <!-- LB -->
+                <section>
+                    <section data-markdown data-separator-notes="^Note:" data-background="data/networking1.gif">
+                        ## Load Balancer
+                    </section>
+                    <section data-markdown>
+                        ## TODO
+                    </section>
                 </section>
-                <section  data-markdown data-background="data/1-curl.gif" data-background-size="contain" data-background-color="black">
-                    # API OpenStack
-                    # +
-                    # API OVH
-                </section>
-                <section  data-markdown data-background-color="white">
-                    ![ovh](data/logo-ovh-sans-300DPI.png)
-                    # +
-                    ![ovh](data/logo-hashicorp-3f10732f.svg)
-                </section>
-                <section  data-markdown data-background-color='white'>
-                    ![Architecture](data/architecture.png)
-                </section>
-                <section  data-markdown data-background="data/7-server-create.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/8-backend-test.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/9-backend-cloud-init.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/10-bootstrap-tf.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/11-variables-tf.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/12-terraform-apply.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/13-terraform-result-cli.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/15-horizon.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/15-terraform-result-web.gif" data-background-size="contain" data-background-color="black"></section>
-                <section  data-markdown data-background="data/question.gif" data-background-color="#ebebeb"></section>
+
+                <!-- FIN -->
+                <section data-markdown data-background="data/question.gif" data-background-color="#ebebeb"></section>
             </div>
         </div>
 
