--- a/slides/index.html
+++ b/slides/index.html
@@ -63,11 +63,13 @@
                     <section data-markdown data-background="data/nova_boot.gif" data-background-size="contain" data-background-color="black">
                         # Instances à la demande
                     </section>
-                    <section data-markdown data-background="data/facturation.gif" data-background-color='white'>
-                        # Facturation à l'heure
+                    <section data-markdown data-background="data/nova_boot.gif" data-background-size="contain" data-background-color="black">
+                        # Object Storage
                     </section>
-                    <section data-markdown data-background="data/flavors.gif" data-background-size="contain" data-background-color="black">
-                        # Des gabarits à partir de 4€/mois
+                    <section data-markdown data-background-color='white'>
+                        ### Facturation à l'heure
+                        * Instances a partir de 4€/mois
+                        * Object Storage 0.01€/Go + 0.01€/Go BP sortante par mois
                     </section>
                     <section data-background-video="data/montage_screen1_V2.mp4" data-background-video-loop data-background-video-muted data-background-color='white'>
                         <h1>Interface de gestion simplifiée</h1>
