--- a/slides/index.html
+++ b/slides/index.html
@@ -63,7 +63,7 @@
                     <section data-markdown data-background="data/nova_boot.gif" data-background-size="contain" data-background-color="black">
                         # Instances à la demande
                     </section>
-                    <section data-markdown data-background="data/nova_boot.gif" data-background-size="contain" data-background-color="black">
+                    <section data-markdown data-background="data/OpenStack_Project_Swift_vertical.png" data-background-color="white">
                         # Object Storage
                     </section>
                     <section data-markdown data-background-color='white'>
