--- a/slides/index.html
+++ b/slides/index.html
@@ -64,12 +64,12 @@
                         # Instances à la demande
                     </section>
                     <section data-markdown data-background="data/OpenStack_Project_Swift_vertical.png" data-background-color="white">
-                        # Object Storage
+                        # Stockage Objet
                     </section>
                     <section data-markdown data-background-color='white'>
                         ### Facturation à l'heure
                         * Instances a partir de 4€/mois
-                        * Object Storage 0.01€/Go + 0.01€/Go BP sortante par mois
+                        * Stockage Objet 0.01€/Go + 0.01€/Go BP sortante par mois
                     </section>
                     <section data-background-video="data/montage_screen1_V2.mp4" data-background-video-loop data-background-video-muted data-background-color='white'>
                         <h1>Interface de gestion simplifiée</h1>
