--- a/slides/index.html
+++ b/slides/index.html
@@ -33,21 +33,30 @@
 
                 <!-- INTRO -->
                 <section>
-                    <section data-markdown>
-                        ## TODO INTRO
-                    </section>
+                    <section data-markdown data-background="data/nuage-de-mots.png" data-background-color="white"></section>
                 </section>
+
 
                 <!-- SD -->
                 <section>
-                    <section data-markdown data-background="data/ovh_dc_bhs.jpg" data-background-size="contain" data-background-color="black">
+                    <section data-markdown data-background="data/ovh_dc_bhs.jpg" data-background-color="black">
                         ## Dedicated servers
                     </section>
                     <section data-markdown>
                         ### C'est quoi ?
                     </section>
-                    <section data-markdown>
-                        ### BLA BLA sur SD
+                    <section data-markdown data-background="data/ovh_dedie_fait_maison.jpg" data-background-color="white">
+                        # "Fait Maison"
+                    </section>
+                    <section data-markdown data-background="data/ovh-serveur-game.jpg" data-background-color="white">
+                        # Performance
+                    </section>
+                    <section data-markdown data-background="data/robots.gif">
+                        # Automatisation
+                    </section>
+                    <section data-markdown data-background="data/turtle.gif">
+                        # Livraison en
+                        # 120 secondes
                     </section>
                 </section>
 
@@ -116,22 +125,29 @@
                     <section data-markdown data-separator-notes="^Note:" data-background="data/networking1.gif">
                         ## Load Balancer
                     </section>
+                    <section data-markdown>
+                        ### C'est quoi ?
+                    </section>
                     <section data-markdown data-separator-notes="^Note:" data-background="data/loadcat.gif" data-background-color='white'>
                         # HAproxy
                     </section>
                     <section data-markdown>
-                        # Algo
-                        #### First
-                        #### Least Connection
-                        #### Round Robin
-                        #### URI
+                        ![iplb_archi](data/Infr02-Loadbalancer.png)
                     </section>
                     <section data-markdown>
-                        ## Comment ca marche ?
+                        ## Comment ?
                         ![iplb_archi](data/iplb_archi2.png)
                     </section>
                     <section data-markdown>
-                        # Stickiness
+                        ## Algorithmes?
+                        #### First
+                        #### Least Connection
+                        #### Round Robin
+                        #### Source
+                        #### URI
+                    </section>
+                    <section data-markdown>
+                        ## Stickiness?
                         #### HTTP cookie
                         #### Source IP
                     </section>
@@ -147,7 +163,9 @@
                 </section>
 
                 <!-- FIN -->
-                <section data-markdown data-background="data/question.gif" data-background-color="#ebebeb"></section>
+                <section data-markdown data-background="data/camion_plot.gif">
+                    ## Conclusion / Questions ?
+                </section>
             </div>
         </div>
 
