--- a/slides/index.html
+++ b/slides/index.html
@@ -86,6 +86,13 @@
                     <section data-background-video="data/montage_screen1_V2.mp4" data-background-video-loop data-background-video-muted data-background-color='white'>
                         <h1>Interface de gestion simplifiée</h1>
                     </section>
+                    <section data-markdown data-background="data/14-horizon.gif" data-background-size="contain" data-background-color="black" data-state="dimbg">
+                        ## OpenStack Dashboard
+                        ## +
+                        ## API OpenStack
+                        ## +
+                        ## API OVH
+                    </section>
                     <section data-markdown data-background="data/map-region-pci-en-v3.jpg" data-background-color='black'>
                         ## 6 regions (13 soon!)
                     </section>
